# serde-metafile

./: Cargo.toml  README.md
examples/: metasize.rs
src/: lib.rs
