[package]
name = "serde-metafile"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "serde-metafile"
repository = "https://github.com/ahaoboy/serde-metafile"
homepage = "https://github.com/ahaoboy/serde-metafile"
authors = ["ahaoboy"]
include = ["/serde-metafile", "/Cargo.toml", "/README.md"]

[dependencies]
path-absolutize = "3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
walkdir = "2"
path-absolutize = "3"
