[package]
name = "serde-metafile"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "serde-metafile"
repository = "https://github.com/ahaoboy/serde-metafile"
homepage = "https://github.com/ahaoboy/serde-metafile"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
